# cfaad

./: .gitignore  CMakeLists.txt  LICENSE  README.md  VAJointSurv.Rout
include/: AAD.h  AADLp.h  AADReduction.h  AADVector.h  AADVectorFuncs.h  blocklist.h
tests/: main.cpp  test-dotProd.cpp  test-logDeter.cpp  test-matVecProd.cpp  test-quadFormInv.cpp  test-quadFormSym.cpp  test-sum.cpp  test-trInvMatMat.cpp  test-triMatVecProd.cpp
